# onnx-verifier

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  GETTING_STARTED.md  LIMITATIONS.md  PROPRIETARY_MODELS.md  QUICKSTART.md  README.md  VERIFICATION.md  add_popular_models.sh  create_fraud_model.py  create_test_model.py  create_vision_models.py  index.html  package-lock.json  package.json  render.yaml  server.js  test_model.onnx  test_model_compatible.onnx  wasm-demo.html  zkml_wasm_verifier.js  zkml_wasm_verifier_bg.wasm
circuits/: OnnxVerification.circom  OnnxVerification.wasm  OnnxVerification.zkey  OnnxVerification_vkey.json  setup.sh
models/: authorization_model.onnx  tiny_mobilenet.onnx
ui/: index.html  package.json  server.js
ui/models/: simple_cnn.onnx
ui/pkg/: package.json  zkml_wasm_verifier.d.ts  zkml_wasm_verifier.js  zkml_wasm_verifier_bg.wasm  zkml_wasm_verifier_bg.wasm.d.ts
wasm-verifier/: Cargo.toml  build.sh  patch.js
wasm-verifier/src/: lib.rs
